2017-06-16  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-loop-ivcanon.c (remove_exits_and_undefined_stmts): Update
	profile.
	(try_unroll_loop_completely): Fix reporting.

2017-06-16  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-tail-merge.c (replace_block_by): Fix profile updating.

2017-06-16  James Greenhalgh  <james.greenhalgh@arm.com>

	PR target/71778
	* config/arm/arm-builtins.c (arm_expand_builtin_args): Return TARGET
	if given a non-constant argument for an intrinsic which requires a
	constant.

2017-06-16  Jan Hubicka  <hubicka@ucw.cz>

	* profile.c (compare_freqs): New function.
	(branch_prob): Sort edge list.
	(find_spanning_tree): Assume that the list is priority sorted.

2017-06-16  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81090
	* passes.def (pass_record_bounds): Remove.
	* tree-pass.h (make_pass_record_bounds): Likewise.
	* tree-ssa-loop.c (pass_data_record_bounds, pass_record_bounds,
	make_pass_record_bounds): Likewise.
	* tree-ssa-loop-ivcanon.c (canonicalize_induction_variables): Do
	not free niter estimates at the beginning but at the end.
	* tree-scalar-evolution.c (scev_finalize): Free niter estimates.

2017-06-16  Richard Biener  <rguenther@suse.de>

	* tree-switch-conversion.c (emit_case_bit_tests): Adjust
	initializer to workaround ICE in host GCC 4.8.

2017-06-16  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-inline-transform.c (update_noncloned_frequencies): Update also
	counts.
	(clone_inlined_nodes): Update.

2017-06-16  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

        * config/aarch64/aarch64.c (qdf24xx_prefetch_tune): Update
        prefetch settings, and enable prefetching by default at -O3.

2017-06-16  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

        * config/aarch64/aarch64.c (aarch64_override_options_internal):
        Set flag_prefetch_loop_arrays according to tuning data.

2017-06-16  Maxim Kuvyrkov  <maxim.kuvyrkov@linaro.org>

        * config/aarch64/aarch64-protos.h (struct cpu_prefetch_tune):